--- a/CPP04/ex02/Makefile
+++ b/CPP04/ex02/Makefile
@@ -1,6 +1,6 @@
 NAME = ex02
 CXX  = c++
-CXXFLAGS = -Wall -Wextra -Werror -std=c++98 -g3 #-fsanitize=address
+CXXFLAGS = -Wall -Wextra -Werror -std=c++98
 SRCS = AAnimal.cpp Brain.cpp Cat.cpp Dog.cpp main.cpp WrongAnimal.cpp WrongCat.cpp
 OBJS = $(SRCS:.cpp=.o)
 
